force-app/main/default/objects/xsms__XSMS_CONFIG__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuration settings for xSMS</description>
    <fields>
        <fullName>xsms__API_Id__c</fullName>
        <description>sms gateway api id</description>
        <inlineHelpText>sms gateway api id</inlineHelpText>
        <label>API Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xsms__Gateway_Key__c</fullName>
        <defaultValue>99</defaultValue>
        <description>xsms account gateway key</description>
        <inlineHelpText>xsms account gateway key</inlineHelpText>
        <label>Gateway Key</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xsms__Key__c</fullName>
        <defaultValue>&apos;-&apos;</defaultValue>
        <description>xsms account key</description>
        <inlineHelpText>xsms account key</inlineHelpText>
        <label>Key</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xsms__MO__c</fullName>
        <description>if MO the YES else NO</description>
        <inlineHelpText>if MO the YES else NO</inlineHelpText>
        <label>MO</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xsms__Sender_Id__c</fullName>
        <description>sender id for account</description>
        <inlineHelpText>sender id for account</inlineHelpText>
        <label>Sender Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xsms__URL_Date_Param__c</fullName>
        <description>incoming SMS time url parameter</description>
        <inlineHelpText>incoming SMS time url parameter</inlineHelpText>
        <label>URL Date Param</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xsms__URL_Message_Param__c</fullName>
        <description>incoming SMS text url parameter</description>
        <inlineHelpText>incoming SMS text url parameter</inlineHelpText>
        <label>URL Message Param</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xsms__URL_Mobile_Param__c</fullName>
        <description>incoming SMS mobile number url parameter</description>
        <inlineHelpText>incoming SMS mobile number url parameter</inlineHelpText>
        <label>URL Mobile Param</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xsms__Value__c</fullName>
        <inlineHelpText>Value for this setting</inlineHelpText>
        <label>Value</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>XSMS CONFIG</label>
</CustomObject>